<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <!-- Title -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/title_about_me"
            android:textColor="@color/bule_primary"
            android:textSize="24sp"
            android:textStyle="bold" />

        <!-- Avatar -->
        <ImageView
            android:id="@+id/imageAvatar"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_circle"
            android:padding="2dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ava" />

        <!-- Student Name -->
        <TextView
            android:id="@+id/tvStudentName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/title_student_name"
            android:textColor="@color/bule_primary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <!-- Student ID -->
        <TextView
            android:id="@+id/tvStudentID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/title_student_ID"
            android:textColor="#888888"
            android:textSize="16sp" />

        <!-- Info List -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="vertical"
            android:paddingHorizontal="20dp">

            <!-- Email -->
            <TextView
                android:id="@+id/txtStudentEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_student_email"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvStudentEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:background="@drawable/bg_about_card"
                android:padding="10dp"
                android:text="@string/tv_student_email"
                android:textSize="14sp" />

            <!-- Class Name -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_class_name"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvStudentClass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:background="@drawable/bg_about_card"
                android:padding="10dp"
                android:text="@string/tv_student_class"
                android:textSize="14sp" />

            <!-- DOB -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_dob"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:background="@drawable/bg_about_card"
                android:padding="10dp"
                android:text="@string/tv_student_dob"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
